--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -1291,6 +1291,10 @@
   dispatch:
     CUDA: miopen_rnn_backward
 
+- func: miopen_rnn_flatten_weight(Tensor[] weight_arr, int weight_stride0, int input_size, int mode, int hidden_size, int num_layers, bool batch_first, bool bidirectional) -> Tensor
+  dispatch:
+    CUDA: miopen_rnn_flatten_weight
+
 - func: mm(Tensor self, Tensor mat2) -> Tensor
   variants: function, method
   dispatch:
